# buscador

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: router.py
app/api/routes/: alerts.py  frontend.py  history.py  search.py  telegram.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: alert.py  offer.py  price_history.py  product.py  store.py
app/notifications/: email.py  telegram.py
app/schemas/: alert.py  history.py  offer.py  product.py
app/scrapers/: base.py  registry.py
app/scrapers/amazon/: scraper.py
app/scrapers/generic/: scraper.py
app/scrapers/kabum/: scraper.py
app/scrapers/mercadolivre/: scraper.py
app/services/: alert_service.py  matching.py  normalization.py  pricing.py  product_service.py  search_service.py  store_service.py
app/static/css/: app.css
app/tasks/: celery_app.py  monitoring.py  scheduler.py
app/templates/: dashboard.html
app/templates/emails/: price_alert.html
app/templates/partials/: offers.html
buscador_precos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nginx/: default.conf
scripts/: deploy.sh  enable_docker_wsl.ps1
tests/: test_api.py  test_matching.py  test_scraper_parse.py
