[project]
name = "buscador-precos"
version = "0.1.0"
description = "Buscador e monitorador de precos exatos com alertas inteligentes."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "anyio>=4.6.0",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "celery[redis]>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "playwright>=1.47.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "python-json-logger>=2.0.7",
  "python-multipart>=0.0.9",
  "rapidfuzz>=3.9.7",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.35",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
  "ruff>=0.6.8",
  "mypy>=1.11.2",
]

[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "docker*", "nginx*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
